--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 .question-container {
 color: aliceblue;
-background-color: #000000a2;
+background-color: #3fbce2a2;
 padding: 20px;
 margin-bottom: 20px;
 text-align: center;
@@ -25,12 +25,12 @@ height: 400px;
 position: relative;
 border-width: 1px;
 border-style: solid;
-border-color: #040b4ebb
+border-color: #000000bb
 
 }
 
 .question-container:hover{
-background-color: #0c033383; 
+background-color: #00000083; 
 transition: background-color 2s; 
 box-shadow: 5px 5px 10px 0px rgba(133, 133, 133, 0.5);
 color: aliceblue;
@@ -39,7 +39,7 @@ box-shadow: #d3d3d3;
 
 #question{
 color: aliceblue;
-background-color:#9900ff2d;
+background-color:#ffffff2d;
 font-weight: 900px;
 text-align: center;
 
@@ -50,14 +50,14 @@ width: 800px;
 }
 
 .alternative {
-background-color: #000000d2;
+background-color: #ffffffd2;
 margin: 10px;
 padding: 10px;
 border-radius: 5px;
 cursor: pointer;
 transition: background-color 0.3s;
 color: aliceblue;
-box-shadow: #d3d3d3;
+box-shadow: #f5f5f5;
 }
 
 .alternative:hover {
@@ -66,11 +66,11 @@ color: #000000;
 }
 
 .correct {
-background-color: #80ff00;
+background-color: #1f3d02;
 }
 
 .incorrect {
-background-color: #ff0000;
+background-color: #460606;
 }
 
 .hidden {
@@ -85,7 +85,7 @@ margin: 10px;
 margin-left: 120px;
 padding: 10px 20px;
 font-weight: 700;
-background-color: #af149a9c;
+background-color: #857e849c;
 color: rgb(0, 0, 0);
 border: none;
 border-radius: 30px;
@@ -96,7 +96,7 @@ width: 200px;
 }
 
 button:hover {
-background-color: #df2ec7f5; 
+background-color: #857e849c; 
  box-shadow: #ffffff;
  transition: 2s;
  width: 203px;
@@ -118,7 +118,7 @@ height: 50px;
 }
 
 .txt:hover{
-background-color: #b6098b91;
+background-color: #857e849c;
 box-shadow: none;
 width: 70;
 height: 50px;
@@ -128,10 +128,10 @@ margin-top: 10px;
 margin-bottom: 10px;
 }
 #submit-question-btn{
-background-color: #af149a;
+background-color: #857e849c;
 }
 #submit-question-btn:hover{
-background-color:  #df2ec7f5;
+background-color:  #857e849c;
 height: 55px;
 width: 205px;
 transition: 0.3s;
@@ -142,13 +142,13 @@ margin-left: 100px;
 display: flex;
 justify-content: center;
 align-items: center;
-background-color: #2a09771a;
+background-color: #837b971a;
 width: 150px;
 height: 150px;
 border-radius: 100%;
 border-width: 2px;
 border: solid;
-border-color: #02064238;
+border-color: #00000238;
 box-shadow: #e0d5df;
 }
 .relogio:hover{
@@ -193,7 +193,7 @@ border-top: none;
 
 
 .jogador {
-background-color: #4b02f754; 
+background-color: #5699e654; 
 padding: 10px; 
 border: 1px;
 border: solid;
